welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:32: error: expected class or object definition
def Carre()=
^FlowerCase:49: error: expected class or object definition
def faireFleur(c:Color)=
^FlowerCase:75: error: expected class or object definition
def faireFleure(c:Color)=
^FlowerCase:101: error: expected class or object definition
def faireFleurSimple(c:Color)=
^FlowerCase:124: error: Unmatched closing brace '}' ignored here
}
^